# trialvo-shop

./: .gitignore  docker-compose.local.yml  docker-compose.prod.yml  generate_keys.js  generate_seed.js  index.html  init-db.sh  nginx-shop.conf  package-lock.json  package.json  rename.js  seed.sql
nginx/: prod.conf
payment-service/: Cargo.toml  DEMO_GUIDE.md  demo.bat  docker-compose.dev.yml  docker-compose.yml  fix_admin.sql  implementation_plan.md  seed_dev.sql
payment-service/examples/: hash_password.rs  seed_admin.rs  seed_dev.rs  seed_test_service.rs
payment-service/examples/test-ecom/: server.js  setup.sql
payment-service/examples/test-ecom/public/: index.html
payment-service/migrations/: 001_init.sql  002_merchant_portal.sql
payment-service/nginx/: nginx.conf
payment-service/scripts/: seed_admin.rs
payment-service/src/: config.rs  lib.rs  main.rs
payment-service/src/api/admin/: ipn.rs
payment-service/src/api/merchant/: auth.rs  dashboard.rs  keys.rs  settings.rs  webhooks.rs
payment-service/src/api/payment/: callback.rs  mod.rs  pay.rs
payment-service/src/crypto/: hmac.rs  mod.rs  totp.rs
payment-service/src/db/: config.rs  ipn.rs  mod.rs  pool.rs  refunds.rs
payment-service/src/ipn/: dispatcher.rs  retry.rs
payment-service/src/templates/: cancelled.html  expired.html  failed.html  mod.rs  not_found.html  success.html
payment-service/static/admin/: index.html
payment-service/static/assets/css/: admin.css  merchant.css  pay.css
payment-service/static/assets/js/: pay.js
payment-service/static/assets/js/admin/: api.js  app.js  components.js  pages.js
payment-service/static/assets/js/merchant/: api.js  app.js  components.js  pages.js
payment-service/static/assets/js/shared/: ui.js
payment-service/static/docs/: index.html
payment-service/static/landing/: index.html
payment-service/static/merchant/: index.html
payment-service/tests/: billing_test.rs  crypto_test.rs  gateway_test.rs  security_test.rs
public/: sitemap.xml
scripts/: post-deploy-cleanup.sh
src/: App.tsx  index.css
(+277 files in other folders)
